--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
+*{
+  margin:0;
+  padding:0;
+  font-family:'kumbh Sans', sans-serif;
+  scroll-behavior: smooth;
+}
+
+
 .App {
   min-height: 100vh;
-  color: white;
-  background-color: #282c34;
   padding: 20px;
   font-family: sans-serif;
   text-align: center;
 }
 input:invalid { border-color: red; }
 
+
 .Logstyle {
   padding: 20px;
   margin: 20px;
   border: 2px solid;
   border-radius: 15px;
+  box-shadow: 10px 10px 5px green;
   border-color: forestgreen;
   height: 50%;
   width: 50%;
-  display:inline-block;
+  display: inline-block
 }
 
 .logTitle{
@@ -46,14 +54,14 @@ label{
     transform: rotate(360deg);
   }
 }
-
-.myApp{
-  min-height: 100vh;
-  padding: 20px;
-  font-family: sans-serif;
-  text-align: center;
-}
-
+/*
+@media all and (max-width: 2560px) {
+  .myApp {
+    min-height: 100vh;
+    padding: 7%;
+    font-family: sans-serif;
+  }
+}*/
 
 .search-container button {
   float: right;
@@ -76,6 +84,24 @@ label{
 
 .hearderAddTraningsplan{
   float:right;
+  margin: 0%;
+  padding: 0%;
+  position: fixed;
+  width: 4%;
+  right: 11%;
+}
+
+
+@media (max-width: 750px) {
+
+  .hearderAddTraningsplan{
+    float:right;
+    margin: 0%;
+    padding: 0%;
+    position: fixed;
+    width: 9%;
+    right: 20%;
+  }
 }
 
 .logo{
@@ -84,7 +110,6 @@ label{
   font-style: italic;
 }
 
-c
 .containerImageAccount img{
   height: 50px;
   width: 50px;
@@ -127,26 +152,33 @@ c
   border: 2px solid;
   border-radius: 15px;
   border-color: darkgreen;
-  height: 20%;
   text-align:justify;
-  margin: auto;
-  width: 20%;
   float: left;
-  background-color: forestgreen;
+  background-color: azure;
   position: relative;
   display: flex;
-  flex-direction: column-reverse;
-  padding: 20px;
-  margin: 10px;
+  padding: 0;
+  margin: 10% 1%;
   flex-flow: row wrap;
 }
 
-@media (max-width: 750px) {
-  .panels {
-    grid-template-columns: 225px auto;
-    grid-template-rows: auto auto auto;
+
+/*@media only screen and (min-width: 300px) {
+  .panels > div  {    border: 2px solid;
+    border-radius: 15px;
+    border-color: darkgreen;
+    height: 20%;
+    text-align: justify;
+    width: 101%;
+    float: left;
+    background-color: azure;
+    position: relative;
+    display: flex;
+    padding: 20px;
+    margin: 10px;
+    flex-flow: row wrap;
   }
-}
+}*/
 
 textarea{
   height: 200px;
@@ -169,17 +201,12 @@ textarea{
 .Allplayers{
   position: relative;
   padding: 10px;
-  margin: 5px;
+  margin: 196px;
   display: flex;
   flex-flow: row wrap;
 }
 
 /*playerprofilsytling------------------------------------------------------------------------------------------*/
-.playerprofilsytling{
-  padding: 90px;
-  margin: 100px;
-  flex-flow: row wrap;
-}
 
 .ononastyling{
   width: 400px;
@@ -187,7 +214,7 @@ textarea{
 }
 
 .profisstatistikstyling{
-  float: right;
+  /*float: right;*/
 }
 .profisstatistikstyling-left{
   float: left;
@@ -211,3 +238,9 @@ table, th, td {
   border-color: forestgreen;
   flex-flow: row wrap;
 }
+
+.app-main{
+  height: 100%;
+}
+
+
