--- a/src/Components/Profil/Profil.css
+++ b/src/Components/Profil/Profil.css
@@ -19,3 +19,47 @@
         grid-template-rows: auto auto auto;
     }
 }
+
+.userList{
+    padding: 100px;
+    margin: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 60px;
+    gap: 60px;
+    text-align: center;
+}
+
+.userListName{
+    justify-content: center;
+}
+.stylingimage{
+    height: 200px;
+    width: 100px;
+    border-radius: 20px;
+}
+
+.userListName{
+    margin: 11% 0;
+    display: flex;
+}
+
+.userListName > div {
+    border: 2px solid;
+    border-radius: 15px;
+    border-color: darkgreen;
+    text-align:justify;
+    float: left;
+    background-color: azure;
+    position: relative;
+    display: flex;
+    padding: 0;
+    margin: 10% 1%;
+    flex-flow: row wrap;
+}
+
+img{
+    border: 1px solid;
+    height: 200px;
+    width: 100px;
+}
